[package]
name = "r-ex"
version = "1.0.1"
authors = ["pradt2"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/pradt2/r-ex"
license = "MIT"

description = "Zero-bloat Rust core library extensions"
keywords = ["core", "corelib", "extensions"]
categories = ["no-std", "rust-patterns"]

[features]
carve = []
copy-from = []
endian = []
from-arr = []
from-ref = []
splice = []
default = []
